# yesod-rest

./: .gitignore  Api.hs  Application.hs  Foundation.hs  Model.hs  README.md  Resolve.hs  Settings.hs  justfile  package.yaml  rest.hurl  stack.yaml  yesod-rest.cabal
.github/workflows/: test.yaml
Api/: Data.hs
Handler/: Comment.hs  Common.hs  Home.hs
Settings/: StaticFiles.hs
app/: DevelMain.hs  devel.hs
config/: apiRoutes  apiRoutes.yesodroutes  keter.yml  models  models.persistentmodels  routes  routes.yesodroutes  settings.yml  test-settings.yml
src/: Api.hs  Application.hs  Foundation.hs  Model.hs  Resolve.hs
src/Api/: Data.hs
src/Handler/: Comment.hs  Common.hs  Home.hs  Profile.hs
src/Settings/: StaticFiles.hs
static/: .eslintrc  .eslintrc.json  package-lock.json  package.json  webpack.config.js
static/app/jsx/: home.jsx
templates/: homepage.hamlet
test/: TestImport.hs
test/Handler/: CommentSpec.hs  CommonSpec.hs  HomeSpec.hs
